RESOLVED FIXED280867
[JSC] Iterator.prototype.forEach() crashes if invoked with callable non-JSFunction argument
https://bugs.webkit.org/show_bug.cgi?id=280867
Summary [JSC] Iterator.prototype.forEach() crashes if invoked with callable non-JSFun...
Alexey Shvayka
Reported 2024-10-03 18:07:31 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-03 18:07:49 PDT
Alexey Shvayka
Comment 2 2024-10-03 18:26:31 PDT
EWS
Comment 3 2024-10-05 20:21:57 PDT
Committed 284738@main (36fdbef0da0d): <https://commits.webkit.org/284738@main> Reviewed commits have been landed. Closing PR #34670 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.