[JSC] Iterator.prototype.forEach() crashes if invoked with callable non-JSFunction argument https://bugs.webkit.org/show_bug.cgi?id=280867 <rdar://problem/137247144>

Reviewed by Yusuke Suzuki.

CachedCall requires a JSFunction, while isCallable() is way more permissive and allows wider variety
of objects (e.g. ProxyObject) that can't be just casted to JSFunction, so this patch introduces a
slower path for non-JSFunction callbacks.

Also, removes unnecessary includes and identifier creation.

* JSTests/stress/iterator-prototype-forEach.js:
(sameArray):
* Source/JavaScriptCore/runtime/JSIteratorPrototype.cpp:
(JSC::JSIteratorPrototype::finishCreation):
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/284738@main